@@ -18,6 +18,8 @@ Changes log
          several authentications if not necessary.
        - Added ClientInfo#certificates and cipherSuite properties
          and deprecated related attributes.
+       - Added shortcut ClientResource#addQueryParameter and
+         addSegment methods, based on the "reference" property.
 
 - 2.1 Milestone 7 (08/24/2011)
     - Bug fixed
